# fizziks

./: .gitignore  CMakeLists.txt  README.md
assets/: CmakeLists.txt
include/FIZX/: common.hpp  core.h  core.hpp  mat.hpp  param.h  param.hpp  particle.h  particle.hpp  pfgen.hpp  vec.hpp
src/: CMakeLists.txt  core.cpp  particle.cpp  pfgen.cpp
src/lib/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  test_core.cpp  test_lib.hpp  test_mat.cpp  test_mat_speed.cpp  test_vec.cpp  testcore.cpp  testlib.hpp  testmat.cpp  testmatspeed.cpp  testvec.cpp
